--- a/lib/temp_web/templates/user/new.html.heex
+++ b/lib/temp_web/templates/user/new.html.heex
@@ -18,7 +18,7 @@
     <%= error_tag f, :mail %>
 </div>
 <div>
-    <%= text_input f, :password, placeholder: "Password" %>
+    <%= password_input f, :password, placeholder: "Password" %>
     <%= error_tag f, :password %>
 </div>
 <div>
