--- a/lib/temp_web/templates/user/index.html.heex
+++ b/lib/temp_web/templates/user/index.html.heex
@@ -5,6 +5,8 @@
         <tr>
             <td><%= render "user.html", user: user %></td>
             <td><%= link "View", to: Routes.user_path(@conn, :show, user.id) %></td>
+            <td><%= link "Edit", to: Routes.user_path(@conn, :show, user.id) %></td>
+            <td><%= link "Delete", to: Routes.user_path(@conn, :show, user.id) %></td>
         </tr>
     <% end %>
 </table>
