fixed register/login, gender association still not working

--- a/lib/temp_web/templates/user/new.html.heex
+++ b/lib/temp_web/templates/user/new.html.heex
@@ -14,8 +14,8 @@
     <%= error_tag f, :username %>
 </div>
 <div>
-    <%= label f, :gender, "Gender"%>
-    <%= select f, :gender, gender_select_options(@genders),
+    <%= label f, :genders, "Gender"%>
+    <%= select f, :genders, gender_select_options(@genders),
         prompt: "Choose a gender" %>
 </div>
 <div>
