--- a/lib/temp_web/templates/user/user.html.heex
+++ b/lib/temp_web/templates/user/user.html.heex
@@ -1,2 +1,6 @@
 <p>ID: <%= @user.id %></p>
 <p>Username: <strong><%= name(@user) %></strong></p>
+
+<p>Mail: <strong><%= mail(@user) %></strong></p>
+
+<p>Role: <strong><%= role(@user) %></strong></p>
