working Enum data tables, without associations / editable / deletable / addable

--- a/lib/temp_web/live/age_level_live/form_component.html.heex
+++ b/lib/temp_web/live/age_level_live/form_component.html.heex
@@ -9,9 +9,9 @@
     phx-change="validate"
     phx-submit="save">
   
-    <%= label f, :age_level %>
-    <%= text_input f, :age_level %>
-    <%= error_tag f, :age_level %>
+    <%= label f, :agelevel %>
+    <%= text_input f, :agelevel %>
+    <%= error_tag f, :agelevel %>
   
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
