--- a/lib/temp_web/live/training_type_live/form_component.html.heex
+++ b/lib/temp_web/live/training_type_live/form_component.html.heex
@@ -9,9 +9,9 @@
     phx-change="validate"
     phx-submit="save">
   
-    <%= label f, :training_type %>
-    <%= text_input f, :training_type %>
-    <%= error_tag f, :training_type %>
+    <%= label f, :trainingtype %>
+    <%= text_input f, :trainingtype %>
+    <%= error_tag f, :trainingtype %>
   
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
