--- a/lib/temp_web/live/training_type_live/index.html.heex
+++ b/lib/temp_web/live/training_type_live/index.html.heex
@@ -4,10 +4,10 @@
   <.modal return_to={Routes.training_type_index_path(@socket, :index)}>
     <.live_component
       module={TempWeb.TrainingTypeLive.FormComponent}
-      id={@training_type.id || :new}
+      id={@trainingtype.id || :new}
       title={@page_title}
       action={@live_action}
-      training_type={@training_type}
+      training_type={@trainingtype}
       return_to={Routes.training_type_index_path(@socket, :index)}
     />
   </.modal>
@@ -22,14 +22,14 @@
     </tr>
   </thead>
   <tbody id="training_types">
-    <%= for training_type <- @training_types do %>
-      <tr id={"training_type-#{training_type.id}"}>
-        <td><%= training_type.training_type %></td>
+    <%= for trainingtype <- @trainingtypes do %>
+      <tr id={"trainingtype-#{trainingtype.id}"}>
+        <td><%= trainingtype.trainingtype %></td>
 
         <td>
-          <span><%= live_redirect "Show", to: Routes.training_type_show_path(@socket, :show, training_type) %></span>
-          <span><%= live_patch "Edit", to: Routes.training_type_index_path(@socket, :edit, training_type) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: training_type.id, data: [confirm: "Are you sure?"] %></span>
+          <span><%= live_redirect "Show", to: Routes.training_type_show_path(@socket, :show, trainingtype) %></span>
+          <span><%= live_patch "Edit", to: Routes.training_type_index_path(@socket, :edit, trainingtype) %></span>
+          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: trainingtype.id, data: [confirm: "Are you sure?"] %></span>
         </td>
       </tr>
     <% end %>
