working display encoded user_relations

--- a/lib/temp_web/templates/user/user.html.heex
+++ b/lib/temp_web/templates/user/user.html.heex
@@ -2,3 +2,7 @@
 <p>Username: <strong><%= name(@user) %></strong></p>
 
 <p>Mail: <strong><%= mail(@user) %></strong></p>
+
+<p>Gender: <strong><%= gender(@user) %></strong></p>
+
+<p>Role: <strong><%= role(@user) %></strong></p>
