update user-form not working, no route found for PUT error

--- a/lib/temp_web/templates/user/index.html.heex
+++ b/lib/temp_web/templates/user/index.html.heex
@@ -1,5 +1,12 @@
-<h1>Users</h1>
+<h1>Filter & Settings</h1>
+<br>
+<p>Select area for filtering and more!</p>
+<div>
 
+</div>
+<br>
+<h1>Users</h1>
+<br>
 <table>
     <%= for user <- @users do %>
         <tr>
