--- a/lib/temp_web/templates/user/new.html.heex
+++ b/lib/temp_web/templates/user/new.html.heex
@@ -1,38 +1,3 @@
 <h1>New User</h1>
-<%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
-<%= if @changeset.action do %> <div class="alert alert-danger">
-    <p>Oops, something went wrong! Please check the errors below.</p>
-  </div>
-<% end %>
 
-<div>
-    <%= label f, :genders, "Name"%>
-    <%= text_input f, :name, placeholder: "Name" %>
-    <%= error_tag f, :name %>
-</div>
-<div>
-    <%= label f, :genders, "Username"%>
-    <%= text_input f, :username, placeholder: "Username" %>
-    <%= error_tag f, :username %>
-</div>
-<div>
-    <%= label f, :gender_id, "Gender"%>
-    <%= select f, :gender_id, Enum.map(@genders, &{&1.gender, &1.id}),
-    prompt: "Choose a gender" %>
-</div>
-<div>
-    <%= label f, :genders, "E-Mail"%>
-    <%= text_input f, :mail, placeholder: "E-Mail" %>
-    <%= error_tag f, :mail %>
-</div>
-<div>
-    <%= label f, :genders, "Password"%>
-    <%= password_input f, :password, placeholder: "Password" %>
-    <%= error_tag f, :password %>
-</div>
-<div>
-    <%= label f, :role_id, "Role"%>
-    <%= select f, :role_id, Enum.map(@roles, &{&1.role, &1.id}),
-    prompt: "Choose a role" %>
-</div>
-<%= submit "Create User" %> <% end %>
+<%= render "user_form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
