--- a/lib/temp_web/templates/user/index.html.heex
+++ b/lib/temp_web/templates/user/index.html.heex
@@ -13,7 +13,7 @@
             <td><%= render "user.html", user: user %></td>
             <td><%= link "View", to: Routes.user_path(@conn, :show, user.id) %></td>
             <td><%= link "Edit", to: Routes.user_path(@conn, :edit, user.id) %></td>
-            <td><%= link "Delete", to: Routes.user_path(@conn, :delete, user.id) %></td>
+            <td><%= link "Delete", to: Routes.user_path(@conn, :delete, user.id), method: :delete, data: [confirm: "Do you really want to Delete?"] %></td>
         </tr>
     <% end %>
 </table>
