--- a/lib/temp_web/templates/layout/root.html.heex
+++ b/lib/temp_web/templates/layout/root.html.heex
@@ -16,6 +16,7 @@
             <ul>
                 <%= if @current_user do %>
                     <li><%= @current_user.username %></li>
+                    <li><%= @current_user.mail %></li>
                     <li>
                         <%= link "Log out",
                             to: Routes.session_path(@conn, :delete, @current_user),
