--- a/lib/temp_web/templates/session/new.html.heex
+++ b/lib/temp_web/templates/session/new.html.heex
@@ -1,15 +1,3 @@
 <h1>Login</h1>
 
-<%= form_for @conn,
-        Routes.session_path(@conn, :create),
-        [as: :session],
-        fn f -> %>
-
-    <div>
-        <%= text_input f, :username, placeholder: "Username" %>
-    </div>
-    <div>
-        <%= password_input f, :password, placeholder: "Password" %>
-    </div>
-    <%= submit "Login" %>
-<% end %>
+<%= render "login_form.html", Map.put(assigns, :action, Routes.session_path(@conn, :create)) %>
