--- a/lib/temp_web/templates/session/login_form.html.heex
+++ b/lib/temp_web/templates/session/login_form.html.heex
@@ -4,7 +4,7 @@
         fn f -> %>
 
     <div>
-        <%= text_input f, :mail, placeholder: "Mail" %>
+        <%= text_input f, :mail, placeholder: "Mail or Password" %>
     </div>
     <div>
         <%= password_input f, :password, placeholder: "Password" %>
