--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,7 @@
 */
 
 /* This file is for your main application CSS */
-@import "./phoenix.css";*/
+@import "./phoenix.css";
 
 /* Alerts and form errors used by phx.new */
 .alert {
