--- a/lib/temp_web/templates/session/login_form.html.heex
+++ b/lib/temp_web/templates/session/login_form.html.heex
@@ -4,10 +4,13 @@
         fn f -> %>
 
     <div>
-        <%= text_input f, :mail, placeholder: "Mail or Password" %>
+        <%= text_input f, :mail, placeholder: "Mail" %>
     </div>
     <div>
         <%= password_input f, :password, placeholder: "Password" %>
     </div>
+
+    <p>Login via mail & pw ;-)</p>
+
     <%= submit "Login" %>
 <% end %>
